--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <script id="templete" type="text/x-tmpl-mustache">
         <div class="container">
             <h2>{{title}}</h2>
-
-            <img class="imegSection" src={ {imagePath}}>
+            <img class="imegSection" src={{image_url}}>
             <p>{{description}}</p>
         </div>
     </script>
